--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <name>liveagent-client</name>
+  <name>api-client</name>
 
   <groupId>com.liveagent.legacy</groupId>
-  <artifactId>liveagent-client</artifactId>
-  <version>3.0.3</version>
+  <artifactId>api-client</artifactId>
+  <version>4.0.0</version>
 
   <packaging>jar</packaging>
 
